--- a/cv/cv.html
+++ b/cv/cv.html
@@ -36,13 +36,14 @@
             <div class="skills-container container-block">
                 <h2 class="container-block-title">Technical Skills</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>Coding: Java, Kotlin, Dart, C#, PHP</li>
-                    <li>Architecture: MVVM, MVP, MVC</li>
-                    <li>Frontend: XML, XAML, HTML</li>
-                    <li>Version Control: GitHub, SVN, Gitlab</li>
-                    <li>Software Tools: Android Studio, Visual Studio, SQL Server</li>
-                    <li>UI/UX: Figma, Procreate, Illustrator</li>
-                    <li>Problem Solving, Documentation, Complexity Analysis</li>
+                    <li>Java, Kotlin, Dart (Flutter), C#, PHP, Vue.js, XML, XAML, HTML</li>
+                    <li>MySQL, SQLite, Room DB, Firebase</li>
+                    <li>Git, GitHub, GitLab, SVN, Docker, Kubernetes</li>
+                    <li>RESTful API Integration & Development</li>
+                    <li>Agile & Scrum Methodologies</li>
+                    <li>CI/CD Pipelines, Jenkins, Terraform</li>
+                    <li>Figma, Procreate, Illustrator</li>
+                    <li>Expert in clear, precise documentation with detailed project requirements</li>
                 </ul>
             </div>
 
@@ -70,16 +71,36 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Objective</h2>
                 <div class="summary">
-                    <p>Eager and open-minded, I possess a growth mindset, driven by curiosity to explore new possibilities. With over 5 years of mobile development experience, I'm committed to embracing emerging technologies to push boundaries and foster innovation. Known for problem-solving prowess.</p>
+                    <p>Eager and open-minded, I possess a growth mindset, driven by curiosity to explore new possibilities. With over 6+ years of mobile development experience, I'm committed to embracing emerging technologies to push boundaries and foster innovation. Known for problem-solving prowess.</p>
                 </div>
             </section>
             <section class="section experiences-section">
                 <h2 class="section-title"><i class="fa fa-briefcase"></i>Professional Experience</h2>
+
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Sr. Software Engineer</h3>
-                            <div class="time">Sep 2022 – Present</div>
+                            <div class="time">Sep 2024 – Present</div>
+                        </div>
+                        <div class="company">Kobet Technology DMCC, Dubai, UAE</div>
+                    </div>
+                    <div class="details">
+                        <ul>
+                             <li>Led the development of a high-performance crypto trading mobile app, integrating real-time market data and wallet functionality.</li>
+                            <li>Built a secure gift card trading platform with cross-border transaction support, enhancing digital asset utility and engagement.</li>
+                            <li>Collaborated closely with the China team to align product goals, achieving a 40% reduction in deployment delays through improved workflows.</li>
+                            <li>Architected web and mobile apps using microservices and CI/CD pipelines, boosting deployment frequency by 60%.</li>
+                            <li>Improved system scalability and security by implementing containerization with Docker and orchestration using Kubernetes.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Sr. Software Engineer</h3>
+                            <div class="time">Sep 2022 – Sep 2024</div>
                         </div>
                         <div class="company">Jeeb E-Commerce, Doha, Qatar</div>
                     </div>
@@ -91,10 +112,11 @@
                             <li>Led remote team; boosted productivity by 30%.</li>
                             <li>Enhanced app with 20+ features; developed version in Flutter.</li>
                             <li>Managed fleet/logistics apps: Driver, Collector, Store Keeper.</li>
-                            <li>Apps: <a href="https://apps.apple.com/ae/app/jeeb-grocery-service/id1614152924" target="_blank">Jeeb (iOS)</a>, <a href="https://play.google.com/store/apps/details?id=qa.pass&hl=en_IN&gl=US" target="_blank">Pass Delivery (Android)</a></li>
+                            <li>Apps: <a href="https://apps.apple.com/ae/app/jeeb-grocery-service/id1614152924" target="_blank"><i class="fa fa-apple"></i> Jeeb</a>, <a href="https://play.google.com/store/apps/details?id=qa.pass&hl=en_IN&gl=US" target="_blank"><i class="fa fa-android"></i> Pass Delivery</a></li>
                         </ul>
                     </div>
                 </div>
+
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
@@ -109,11 +131,65 @@
                             <li>Integrated biometric attendance, MDM tracking, geolocation features.</li>
                             <li>Contributed to DigiSchool (e-learning app).</li>
                             <li>Led QA/UAT efforts, reducing app crashes by 30%.</li>
-                            <li>App: <a href="https://play.google.com/store/apps/details?id=com.evidyavahini.app" target="_blank">EVV2.0</a></li>
+                            <li>App: <a href="https://play.google.com/store/apps/details?id=com.evidyavahini.app" target="_blank"><i class="fa fa-android"></i> EVV2.0</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Android App Developer</h3>
+                            <div class="time">Jan 2020 – Aug 2020</div>
+                        </div>
+                        <div class="company">JUSCO (Tata Steel Company), Jamshedpur</div>
+                    </div>
+                    <div class="details">
+                        <ul>
+                            <li>Developed native app to digitize vendor register maintenance process.</li>
+                            <li>Reduced data entry time by 70%, improved accuracy by 50%.</li>
+                            <li>Used SQL Server and REST API to accelerate development by 20%.</li>
+                            <li>App: <strong>JMR</strong></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Mobile App Developer</h3>
+                            <div class="time">Aug 2019 – Jan 2020</div>
+                        </div>
+                        <div class="company">MFK Software, Jamshedpur</div>
+                    </div>
+                    <div class="details">
+                        <ul>
+                            <li>Developed cross-platform school management app using Xamarin.</li>
+                            <li>Improved operational efficiency by 40% and student engagement by 30%.</li>
+                            <li>Designed intuitive UI; boosted sales by 40%.</li>
+                            <li>App: <strong>e-CampusLink</strong></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Data Analyst (Internship)</h3>
+                            <div class="time">2018 (2 Months)</div>
+                        </div>
+                        <div class="company">TATA Growth Shop (TGS), Jamshedpur</div>
+                    </div>
+                    <div class="details">
+                        <ul>
+                            <li>Built Windows dashboard to monitor and manage 100+ devices.</li>
+                            <li>Developed secure Excel-to-SQL import mechanism.</li>
+                            <li>Improved data processing and visualization by 90%.</li>
                         </ul>
                     </div>
                 </div>
             </section>
+
             <section class="section">
                 <h2 class="section-title"><i class="fa fa-code"></i>Projects</h2>
                 <ul>
@@ -124,12 +200,14 @@
                     <li><strong>Restaurant Chatbot</strong> - IBM Watson: Table booking chatbot using location/time.</li>
                 </ul>
             </section>
+
             <section class="section">
                 <h2 class="section-title"><i class="fa fa-certificate"></i>Certifications</h2>
                 <ul>
-                    <li>Prompt Engineering for Generative AI (2024)</li>
-                    <li>AR/VR/XR & Metaverse Intro Course (2024)</li>
-                    <li>CCNA Routing & Switching (2018)</li>
+                    <li>Completed “Prompt Engineering for Generative AI”</li>
+                    <li>Completed “AR/VR/XR & Metaverse” Introduction course</li>
+                    <li>CCNA -Routing & Switching</li>
+                    <li>Secured 3rd place in Autonomous Robotics exhibition by NIT Jsr for an innovative IoT project</li>
                 </ul>
             </section>
         </div>
