--- a/cv/cv.html
+++ b/cv/cv.html
@@ -92,6 +92,9 @@
                             <li>Collaborated closely with the China team to align product goals, achieving a 40% reduction in deployment delays through improved workflows.</li>
                             <li>Architected web and mobile apps using microservices and CI/CD pipelines, boosting deployment frequency by 60%.</li>
                             <li>Improved system scalability and security by implementing containerization with Docker and orchestration using Kubernetes.</li>
+                            <li>Apps: <a href="https://apps.apple.com/us/app/vivakard-plus/id6749223091" target="_blank"><i class="fa fa-apple"></i> Vivakard</a>, <a href="https://play.google.com/store/apps/details?id=com.gift.vivakard&hl=en" target="_blank"><i class="fa fa-android"></i> Vivakard</a></li>
+                            <li>Apps: <a href="https://apps.apple.com/us/app/timucard/id6752526295" target="_blank"><i class="fa fa-apple"></i> Timucard</a>, <a href="https://play.google.com/store/apps/details?id=com.timucard.gift&hl=en" target="_blank"><i class="fa fa-android"></i> Timucard</a></li>
+
                         </ul>
                     </div>
                 </div>
