--- a/cv/cv.html
+++ b/cv/cv.html
@@ -36,12 +36,13 @@
             <div class="skills-container container-block">
                 <h2 class="container-block-title">Technical Skills</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>Java, Kotlin, Dart (Flutter), C#, PHP, Vue.js, XML, XAML, HTML</li>
+                    <li>Java, Kotlin, Dart (Flutter), C#, PHP, ARCore Vue.js, XML, XAML, HTML</li>
                     <li>MySQL, SQLite, Room DB, Firebase</li>
-                    <li>Git, GitHub, GitLab, SVN, Docker, Kubernetes</li>
+                    <li>Git, GitHub, GitLab, SVN</li>
                     <li>RESTful API Integration & Development</li>
-                    <li>Agile & Scrum Methodologies</li>
-                    <li>CI/CD Pipelines, Jenkins, Terraform</li>
+                    <li>MVC, MVVM, MVP</li>
+                    <li>Agile & Scrum Methodologies, JIRA</li>
+                    <li>CI/CD Pipelines</li>
                     <li>Figma, Procreate, Illustrator</li>
                     <li>Expert in clear, precise documentation with detailed project requirements</li>
                 </ul>
@@ -201,6 +202,8 @@
                     <li><strong>Face Detection App</strong> - Face API: Detects age, gender, expression, hair, etc.</li>
                     <li><strong>Social Media App</strong> - Firebase + REST: Share text/image, like, comment, notify.</li>
                     <li><strong>Restaurant Chatbot</strong> - IBM Watson: Table booking chatbot using location/time.</li>
+                    <li><strong>AR Product Showcase</strong> - Scan surface → place product, Show product info cards in AR.</li>
+                    <li><strong>AR Measurement Tool</strong> - Measure distance, height, area in real space.</li>
                 </ul>
             </section>
 
