--- a/cv/cv.html
+++ b/cv/cv.html
@@ -154,6 +154,7 @@
                             <li>Reduced data entry time by 70%, improved accuracy by 50%.</li>
                             <li>Used SQL Server and REST API to accelerate development by 20%.</li>
                             <li>App: <strong>JMR</strong></li>
+                            <li>Apps: <a href="https://play.google.com/store/apps/details?id=com.juscoltd.jmr20" target="_blank"><i class="fa fa-android"></i> JMR</a></li>
                         </ul>
                     </div>
                 </div>
