--- a/cv/cv.html
+++ b/cv/cv.html
@@ -24,7 +24,7 @@
             </div>
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="phone"><i class="fa fa-phone"></i> +91 87978 01820</li>
+                    <li class="phone"><i class="fa fa-phone"></i> +91 87978 01820 (India)</li>
                     <li class="phone"><i class="fa fa-phone"></i> +971 50810 3246 (Dubai)</li>
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto:afaquejaya123@gmail.com">afaquejaya123@gmail.com</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/afaque-jaya-5b6311134" target="_blank">linkedin.com/in/afaquejaya</a></li>
@@ -36,7 +36,8 @@
             <div class="skills-container container-block">
                 <h2 class="container-block-title">Technical Skills</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>Java, Kotlin, Dart (Flutter), C#, PHP, ARCore Vue.js, XML, XAML, HTML</li>
+                    <li>Java, Kotlin, Dart, Xamarin, C#, PHP, ARCore Vue.js, XML, XAML, HTML</li>
+                    <li>.Net, Android, Flutter</li>
                     <li>MySQL, SQLite, Room DB, Firebase</li>
                     <li>Git, GitHub, GitLab, SVN</li>
                     <li>RESTful API Integration & Development</li>
@@ -150,7 +151,7 @@
                     </div>
                     <div class="details">
                         <ul>
-                            <li>Developed native app to digitize vendor register maintenance process.</li>
+                            <li>Developed native app to automate vendor register maintenance, eliminate manual process, and built scalable backend APIs using .NET.</li>
                             <li>Reduced data entry time by 70%, improved accuracy by 50%.</li>
                             <li>Used SQL Server and REST API to accelerate development by 20%.</li>
                             <li>Apps: <a href="https://play.google.com/store/apps/details?id=com.juscoltd.jmr20" target="_blank"><i class="fa fa-android"></i> JMR</a></li>
@@ -168,7 +169,7 @@
                     </div>
                     <div class="details">
                         <ul>
-                            <li>Developed cross-platform school management app using Xamarin.</li>
+                            <li>Built a cross-platform web & Mobile application with .NET & Xamarin, Integrated ERP & third-party APIs.</li>
                             <li>Improved operational efficiency by 40% and student engagement by 30%.</li>
                             <li>Designed intuitive UI; boosted sales by 40%.</li>
                             <li>App: <strong>e-CampusLink</strong></li>
