--- a/cv/cv.html
+++ b/cv/cv.html
@@ -96,6 +96,7 @@
                             <li>Improved system scalability and security by implementing containerization with Docker and orchestration using Kubernetes.</li>
                             <li>Apps: <a href="https://apps.apple.com/us/app/vivakard-plus/id6749223091" target="_blank"><i class="fa fa-apple"></i> Vivakard</a>, <a href="https://play.google.com/store/apps/details?id=com.gift.vivakard&hl=en" target="_blank"><i class="fa fa-android"></i> Vivakard</a></li>
                             <li>Apps: <a href="https://apps.apple.com/us/app/timucard/id6752526295" target="_blank"><i class="fa fa-apple"></i> Timucard</a>, <a href="https://play.google.com/store/apps/details?id=com.timucard.gift&hl=en" target="_blank"><i class="fa fa-android"></i> Timucard</a></li>
+                            <li>Apps: <a href="https://play.google.com/store/apps/details?id=com.bitowi.app&hl=en_US" target="_blank"><i class="fa fa-android"></i> Bitowi</a></li>
 
                         </ul>
                     </div>
