--- a/cv/cv.html
+++ b/cv/cv.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/me.jpg" style="width:200px; height:200px" alt=""/>
+                <img class="profile" src="assets/images/me.jpg" alt=""/>
                 <h1 class="name">Afaque Jaya</h1>
                 <h3 class="tagline">Sr. Software Engineer</h3>
             </div>
