--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Personal Website of Afaque Jaya, Computer Science Engineering Student, Developer" />
     <meta name="keywords" content="afaquejaya , afaquejaya,java ,c# developer, Personal, Website, Resume, CV,B.A.College of engineering & Technology, Computer Science, Engineer" />
     <meta name="author" content="afaquejaya" />
-    <link rel="shortcut icon" href="me.ico">
-    <link rel="icon" href="me.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="me_new.ico">
+    <link rel="icon" href="me_new.ico" type="image/x-icon">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/bulmaswatch.min.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
