--- a/cv/cv.html
+++ b/cv/cv.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="resume">
     <meta name="author" content="afaquejaya">
-    <link rel="shortcut icon" href="me.ico">
-    <link rel="icon" href="me.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="me_new.ico">
+    <link rel="icon" href="me_new.ico" type="image/x-icon">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
