--- a/cv/cv.html
+++ b/cv/cv.html
@@ -12,8 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
-    <!-- <link id="theme-style" rel="stylesheet" href="assets/css/all.css"> -->
-    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+    <link id="theme-style" rel="stylesheet" href="assets/css/all.css">
 </head>
 <body>
     <div class="wrapper">
