--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <style>
 
         .avatar {
-            margin-bottom: 1em width: 150px;
-            height: 150px;
+            margin-bottom: 1em width: 250px;
+            height: 250px;
             border-radius: 50%;
             text-align: center;
             display: table-cell;
@@ -41,7 +41,7 @@
         </nav>
         <div class="hero-head">
             <div class="container">
-                <center><img class="avatar" src="/img/me_new.png"  style="width: 220px; height: 220px;></center>
+                <center><img class="avatar" src="/img/me_new.png" ></center>
             </div>
         </div>
 
