--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <style>
 
         .avatar {
-            margin-bottom: 1em width: 250px;
-            height: 250px;
+            margin-bottom: 1em width: 200px;
+            height: 200px;
             border-radius: 50%;
             text-align: center;
-            display: table-cell;
+            display: block;
             vertical-align: middle
         }
     </style>
