--- a/cv/cv.html
+++ b/cv/cv.html
@@ -36,16 +36,18 @@
             <div class="skills-container container-block">
                 <h2 class="container-block-title">Technical Skills</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>Java, Kotlin, Dart, Xamarin, C#, PHP, ARCore Vue.js, XML, XAML, HTML</li>
-                    <li>.Net, Android, Flutter</li>
-                    <li>MySQL, SQLite, Room DB, Firebase</li>
-                    <li>Git, GitHub, GitLab, SVN</li>
-                    <li>RESTful API Integration & Development</li>
-                    <li>MVC, MVVM, MVP</li>
-                    <li>Agile & Scrum Methodologies, JIRA</li>
-                    <li>CI/CD Pipelines</li>
-                    <li>Figma, Procreate, Illustrator</li>
-                    <li>Expert in clear, precise documentation with detailed project requirements</li>
+                    <li><strong>Programming Languages:</strong> Java, Kotlin, Dart, C#, PHP</li>
+                    <li><strong>Mobile & Cross-Platform Frameworks:</strong> Android, Flutter, Xamarin, .NET, ARCore, Jetpack Compose</li>  
+                    <li><strong>UI Technologies:</strong> XML, XAML, HTML</li>  
+                    <li><strong>Databases & Backend Services:</strong> MySQL, SQLite, Room DB, Firebase</li>
+                    <li><strong>Architecture Patterns:</strong> MVC, MVVM, MVP</li>
+                    <li><strong>API & Integration:</strong> RESTful API Integration & Development</li>
+                    <li><strong>Testing:</strong> Unit Testing, UI Testing</li>
+                    <li><strong>Version Control:</strong> Git, GitHub, GitLab, SVN</li>
+                    <li><strong>DevOps & Delivery:</strong> CI/CD Pipelines</li>
+                    <li><strong>Project Methodologies:</strong> Agile, Scrum, JIRA</li>
+                    <li><strong>Design & Prototyping:</strong> Figma, Procreate, Illustrator</li>
+                    <li><strong>Documentation:</strong> Clear technical documentation & requirement detailing</li>
                 </ul>
             </div>
 
